fix spacing and started on media queries

--- a/main.scss
+++ b/main.scss
@@ -9,6 +9,7 @@ $gray-light:#f1f1f1;
 $gray-dark: #585858;
 $orangered: orangered;
 $orangered-light: #ff7c4d;
+$tablet: 768px;
 
 
 * {
@@ -216,7 +217,7 @@ main {
   }
 
   .main-about{
-    padding: 5rem 0;
+    padding: 5rem 0 3rem 0;
 
     &__content {
 
@@ -266,7 +267,7 @@ main {
   }
 
   .main-reviews {
-    padding: 3rem 0;
+    padding: 1rem 0;
     margin-bottom: 5%;
     display: flex;
     flex-direction: column;
@@ -280,9 +281,10 @@ main {
 
     p{
       background-color: $gray-light;
+      margin: 2rem 0 3rem 0;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      padding: 1rem;
-      width: 50%;
+      padding: 1rem 5rem;
+      width: 65%;
       position: relative;
       z-index: 5;
 
@@ -301,16 +303,16 @@ main {
   }
 
     .main-last {
-      padding: 5rem;
+      padding: 3rem;
       display: flex;
       align-items: center;
       flex-direction: column;
       color: white;
-      line-height: 5rem;
+      line-height: 3rem;
       background-color: $primary-green;
 
       .media-icons  {
-        padding-top: 3rem;
+        padding-top: 2rem;
 
         a {
           fill: $white;
@@ -326,4 +328,34 @@ main {
 
       }
     }
+}
+
+@media only screen and (max-width: 815px) {
+  header {
+    display: flex;
+
+    .nav-list a, .primary_btn {
+      display: none;
+    }
+  }
+
+  main {
+    display: block;
+  }
+
+  .main-about__content{
+
+
+    &-list {
+      flex-direction: column;
+      align-items: center!important;
+
+      &-item {
+        width: 90% !important;
+        margin: 1rem;
+      }
+  }
+  }
+
+
 }
